Fixes only 1 tinker console will be open at all times Resolves #16